[package]
name = "rhis"
version = "0.1.0"
authors = ["beltram.maldant <beltram.maldant@gmail.com>"]
edition = "2018"

[dependencies]
proxy-wasm = "0.1.0"
log = "0.4.8"
wasm-bindgen = "0.2.59"
chrono = "0.4.11"
serde_json = "1.0.49"
serde = "1.0.105"
serde_derive = "1.0.105"

[lib]
crate-type = ["cdylib"]